# ssl-eeg

./: .gitignore  README.md
code/: README.md  pyproject.toml  virtualenv.def
code/metadata/ds004504/: master_subject_table_ds004504.csv
code/notebooks/: model.ipynb  model_cleaned.ipynb  model_derivative.ipynb  preproc.ipynb  test.ipynb
code/notebooks/ds004504/: explore_new.ipynb
code/scripts/: singularity_job.sh  squashfs_job.sh
code/singularity/: virtualenv_cpu.def  virtualenv_cuda.def
code/src/: train_supervised.py
code/src/analysis/: build_master_table.py  dataset_report.py
code/src/data/: adftd_dataloader.py
code/src/model/: eegconformer.py
code/src/preprocess/: adftd_preprocess.py
code/src/test/: preprocess.py
manuscript/: title_page.tex
workings/: readme.md
workings/minutes/: readme.md
workings/proposal/: readme.md
